--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,5 +5,9 @@ compatibility_date = "2025-12-27"
 directory = "./dist"
 
 [[routes]]
-pattern = "letournel.dev"
+pattern = "letournel.dev/*"
+custom_domain = true
+
+[[routes]]
+pattern = "www.letournel.dev/*"
 custom_domain = true
